iac/k8s/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avalier-demo7
  labels:
    app: avalier-demo7
spec:
  selector:
    app: avalier-demo7
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
