iac/k8s/yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: avalier-demo7
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: avalier-demo7.kube.avalier.io
    http:
      paths:
      - path: /
        backend:
          serviceName: avalier-demo7
          servicePort: 80
  #tls:
  #- hosts:
  #  - hello-world.local.avalier.io
  #  secretName: tls-avalier-io
